# gn-tools

./: .gitignore  BUILD.gn  gcc.gni  pkg_config.gni
linux/: BUILD.gn
mac/: BUILD.gn  templates.gni  version.gni
scripts/: bootstrap.py  cfg.py  copy_info_plist.py  download-gn.py  download-ninja.py  embed.py  pkg_config.py  roll_binaries.py  test_cfg.py
win/: BUILD.gn
