# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("c++11") {
  cflags_cc = [ "-std=c++11" ]
  ldflags = cflags_cc
}

config("libc++") {
  cflags_cc = [ "-stdlib=libc++" ]
  ldflags = cflags_cc
}

config("dev") {
  cflags = [ "-O0" ]
}

config("opt") {
  cflags = [ "-Os" ]
  defines = [ "NDEBUG" ]
}

config("dbg") {
  cflags = [ "-g" ]
}

config("sanitize_memory") {
  cflags = [
    "-fsanitize=memory",
    "-fsanitize-memory-track-origins",
  ]
  ldflags = cflags
}

config("sanitize_address") {
  cflags = [
    "-fsanitize=address",
    "-fno-omit-frame-pointer",
  ]
  ldflags = cflags
}

config("sanitize_undefined") {
  cflags = [
    "-fsanitize=undefined",
    "-fno-sanitize-recover=undefined",
  ]
  ldflags = cflags
}
