# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

script = "//build/lib/scripts/pkg_config.py"

template("pkg_config") {
  assert(defined(invoker.lib))
  flags = exec_script(script, [ invoker.lib ], "scope")
  config(target_name) {
    include_dirs = flags.include_dirs
    cflags = flags.cflags
    lib_dirs = flags.lib_dirs
    libs = flags.libs
    ldflags = flags.ldflags
  }
}
