# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gcc.gni")

gcc_toolchain("linux") {
  cc = "clang"
  cxx = "clang++"
  ld = cxx
  ar = "ar"
}

gcc_toolchain("cross_mac") {
  cc = "x86_64-apple-darwin15-clang"
  cxx = "x86_64-apple-darwin15-clang++"
  objc = cc
  objcxx = cxx
  ld = cxx
  ar = "x86_64-apple-darwin15-ar"
}

gcc_toolchain("cross_win") {
  cc = "clang -target x86_64-w64-mingw32 -static -D__CRT__NO_INLINE -nostdinc -Qunused-arguments -isystem /usr/lib/clang/7.0.0/include -isystem /usr/lib/gcc/x86_64-w64-mingw32/7.3-win32/include/c++ -isystem /usr/lib/gcc/x86_64-w64-mingw32/7.3-win32/include/c++/x86_64-w64-mingw32 -isystem /usr/x86_64-w64-mingw32/include"
  cxx = "clang++ -target x86_64-w64-mingw32 -static -D__CRT__NO_INLINE -nostdinc -nostdinc++ -Qunused-arguments -isystem /usr/lib/clang/7.0.0/include -isystem /usr/lib/gcc/x86_64-w64-mingw32/7.3-win32/include/c++ -isystem /usr/lib/gcc/x86_64-w64-mingw32/7.3-win32/include/c++/x86_64-w64-mingw32 -isystem /usr/x86_64-w64-mingw32/include"
  ld = cxx
  ar = "x86_64-w64-mingw32-ar"
}
