# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gcc.gni")

declare_args() {
  clang = "clang"
  clangxx = "clang++"
}

gcc_toolchain("linux") {
  cc = clang
  cxx = clangxx
  ld = cxx
  ar = "ar"
  extra_libs = "-lpthread"
}

gcc_toolchain("cross_mac") {
  cc = "x86_64-apple-darwin15-clang"
  cxx = "x86_64-apple-darwin15-clang++"
  objc = cc
  objcxx = cxx
  ld = cxx
  ar = "x86_64-apple-darwin15-ar"
  extra_libs = "-lpthread"
}

gcc_toolchain("cross_win") {
  cc = "clang -target x86_64-w64-mingw32 -static"
  cxx = "clang++ -target x86_64-w64-mingw32 -static"
  ld = cxx
  ar = "x86_64-w64-mingw32-ar"
  extra_libs = "-lpthread -lws2_32"
}
