# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gcc.gni")
import("version.gni")

version_flag = ""
if (macosx_version_min != "") {
  version_flag = " -mmacosx-version-min=$macosx_version_min"
}

gcc_toolchain("mac") {
  cc = "clang" + version_flag
  cxx = "clang++" + version_flag
  objc = cc
  objcxx = cxx
  ld = cxx
  ar = "ar"
}
