# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gcc.gni")
import("version.gni")

declare_args() {
  llvm_prefix = ""
}

prefix = ""
suffix = ""

if (llvm_prefix != "") {
  prefix = llvm_prefix + "/bin/"
  suffix += " -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"
}

if (macosx_version_min != "") {
  suffix += " -mmacosx-version-min=$macosx_version_min"
}

gcc_toolchain("mac") {
  cc = prefix + "clang" + suffix
  cxx = prefix + "clang++" + suffix
  objc = cc
  objcxx = cxx
  ld = cxx
  ar = "ar"
}
