# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../gcc.gni")
import("version.gni")

declare_args() {
  clang = "clang"
  clangxx = "clang++"
}

suffix = ""
if (llvm_prefix != "") {
  suffix += " -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"
}

if (macosx_version_min != "") {
  suffix += " -mmacosx-version-min=$macosx_version_min"
}

gcc_toolchain("mac") {
  cc = clang + suffix
  cxx = clangxx + suffix
  objc = cc
  objcxx = cxx
  ld = cxx
  ar = "ar"
}
